--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.github.fafaldo:fab-toolbar:1.2.0'
 }
